# cic

./: .gitignore  Cargo.toml  README.md  building.md  cic.example.toml  index.html  makefile  params.json
.github/workflows/: ci.yml  hypermod.yml  release.yml
Formula/: cic.rb
building/: index.md
ci.xcodeproj/: project.pbxproj
ci.xcodeproj/project.xcworkspace/xcshareddata/: ci.xccheckout
ci.xcodeproj/project.xcworkspace/xcuserdata/graham.xcuserdatad/: UserInterfaceState.xcuserstate
ci.xcodeproj/xcshareddata/xcschemes/: ci.xcscheme  citest.xcscheme
ci.xcodeproj/xcuserdata/graham.xcuserdatad/xcschemes/: ci.xcscheme  xcschememanagement.plist
src/: ansii_escape.hpp  app.rs  ci.1  command_line_options_parser.hpp  config.hpp  config.rs  http.hpp  jenkins.hpp  main.cpp  main.rs  tool.hpp  ui.rs
src/providers/: github.rs  jenkins.rs  mod.rs
test/: ci_config_test.cpp  command_line_options_parser_tests.cpp  job_test.cpp  test_main.cpp
