[package]
name = "cic"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for monitoring CI builds across GitHub Actions and Jenkins"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
notify-rust = "4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
